sorting using comparator: Playlist songs